scripts/nullaway/wpi/urldd9e4ada6f_kirillF_sample_jenkins_project_tgz-pJ8-com_bigfatplayer_hello_AppJ8.txt
../wpi/urldd9e4ada6f_kirillF_sample_jenkins_project_tgz-pJ8-com_bigfatplayer_hello_AppJ8/src/com/bigfatplayer/hello/Calculator.java:647: error: [NullAway] dereferenced expression schemes.get(iprot.getScheme()) is @Nullable
            schemes.get(iprot.getScheme()).getScheme().read(iprot, this);
                                          ^
    (see http://t.uber.com/nullaway )
../wpi/urldd9e4ada6f_kirillF_sample_jenkins_project_tgz-pJ8-com_bigfatplayer_hello_AppJ8/src/com/bigfatplayer/hello/Calculator.java:652: error: [NullAway] dereferenced expression schemes.get(oprot.getScheme()) is @Nullable
            schemes.get(oprot.getScheme()).getScheme().write(oprot, this);
                                          ^
    (see http://t.uber.com/nullaway )
../wpi/urldd9e4ada6f_kirillF_sample_jenkins_project_tgz-pJ8-com_bigfatplayer_hello_AppJ8/src/com/bigfatplayer/hello/Calculator.java:917: error: [NullAway] dereferenced expression schemes.get(iprot.getScheme()) is @Nullable
            schemes.get(iprot.getScheme()).getScheme().read(iprot, this);
                                          ^
    (see http://t.uber.com/nullaway )
../wpi/urldd9e4ada6f_kirillF_sample_jenkins_project_tgz-pJ8-com_bigfatplayer_hello_AppJ8/src/com/bigfatplayer/hello/Calculator.java:922: error: [NullAway] dereferenced expression schemes.get(oprot.getScheme()) is @Nullable
            schemes.get(oprot.getScheme()).getScheme().write(oprot, this);
                                          ^
    (see http://t.uber.com/nullaway )
../wpi/urldd9e4ada6f_kirillF_sample_jenkins_project_tgz-pJ8-com_bigfatplayer_hello_AppJ8/src/com/bigfatplayer/hello/Calculator.java:1347: error: [NullAway] dereferenced expression schemes.get(iprot.getScheme()) is @Nullable
            schemes.get(iprot.getScheme()).getScheme().read(iprot, this);
                                          ^
    (see http://t.uber.com/nullaway )
../wpi/urldd9e4ada6f_kirillF_sample_jenkins_project_tgz-pJ8-com_bigfatplayer_hello_AppJ8/src/com/bigfatplayer/hello/Calculator.java:1352: error: [NullAway] dereferenced expression schemes.get(oprot.getScheme()) is @Nullable
            schemes.get(oprot.getScheme()).getScheme().write(oprot, this);
                                          ^
    (see http://t.uber.com/nullaway )
../wpi/urldd9e4ada6f_kirillF_sample_jenkins_project_tgz-pJ8-com_bigfatplayer_hello_AppJ8/src/com/bigfatplayer/hello/Calculator.java:1759: error: [NullAway] dereferenced expression schemes.get(iprot.getScheme()) is @Nullable
            schemes.get(iprot.getScheme()).getScheme().read(iprot, this);
                                          ^
    (see http://t.uber.com/nullaway )
../wpi/urldd9e4ada6f_kirillF_sample_jenkins_project_tgz-pJ8-com_bigfatplayer_hello_AppJ8/src/com/bigfatplayer/hello/Calculator.java:1764: error: [NullAway] dereferenced expression schemes.get(oprot.getScheme()) is @Nullable
            schemes.get(oprot.getScheme()).getScheme().write(oprot, this);
                                          ^
    (see http://t.uber.com/nullaway )
../wpi/urldd9e4ada6f_kirillF_sample_jenkins_project_tgz-pJ8-com_bigfatplayer_hello_AppJ8/src/com/bigfatplayer/hello/Calculator.java:2172: error: [NullAway] dereferenced expression this.w is @Nullable
                if (!this.w.equals(that.w))
                           ^
    (see http://t.uber.com/nullaway )
../wpi/urldd9e4ada6f_kirillF_sample_jenkins_project_tgz-pJ8-com_bigfatplayer_hello_AppJ8/src/com/bigfatplayer/hello/Calculator.java:2220: error: [NullAway] dereferenced expression schemes.get(iprot.getScheme()) is @Nullable
            schemes.get(iprot.getScheme()).getScheme().read(iprot, this);
                                          ^
    (see http://t.uber.com/nullaway )
../wpi/urldd9e4ada6f_kirillF_sample_jenkins_project_tgz-pJ8-com_bigfatplayer_hello_AppJ8/src/com/bigfatplayer/hello/Calculator.java:2225: error: [NullAway] dereferenced expression schemes.get(oprot.getScheme()) is @Nullable
            schemes.get(oprot.getScheme()).getScheme().write(oprot, this);
                                          ^
    (see http://t.uber.com/nullaway )
../wpi/urldd9e4ada6f_kirillF_sample_jenkins_project_tgz-pJ8-com_bigfatplayer_hello_AppJ8/src/com/bigfatplayer/hello/Calculator.java:2643: error: [NullAway] dereferenced expression schemes.get(iprot.getScheme()) is @Nullable
            schemes.get(iprot.getScheme()).getScheme().read(iprot, this);
                                          ^
    (see http://t.uber.com/nullaway )
../wpi/urldd9e4ada6f_kirillF_sample_jenkins_project_tgz-pJ8-com_bigfatplayer_hello_AppJ8/src/com/bigfatplayer/hello/Calculator.java:2648: error: [NullAway] dereferenced expression schemes.get(oprot.getScheme()) is @Nullable
            schemes.get(oprot.getScheme()).getScheme().write(oprot, this);
                                          ^
    (see http://t.uber.com/nullaway )
../wpi/urldd9e4ada6f_kirillF_sample_jenkins_project_tgz-pJ8-com_bigfatplayer_hello_AppJ8/src/com/bigfatplayer/hello/Calculator.java:2945: error: [NullAway] dereferenced expression schemes.get(iprot.getScheme()) is @Nullable
            schemes.get(iprot.getScheme()).getScheme().read(iprot, this);
                                          ^
    (see http://t.uber.com/nullaway )
../wpi/urldd9e4ada6f_kirillF_sample_jenkins_project_tgz-pJ8-com_bigfatplayer_hello_AppJ8/src/com/bigfatplayer/hello/Calculator.java:2950: error: [NullAway] dereferenced expression schemes.get(oprot.getScheme()) is @Nullable
            schemes.get(oprot.getScheme()).getScheme().write(oprot, this);
                                          ^
    (see http://t.uber.com/nullaway )
../wpi/urldd9e4ada6f_kirillF_sample_jenkins_project_tgz-pJ8-com_bigfatplayer_hello_AppJ8/src/com/bigfatplayer/hello/Work.java:174: error: [NullAway] dereferenced expression other is @Nullable
        __isset_bitfield = other.__isset_bitfield;
                                ^
    (see http://t.uber.com/nullaway )
../wpi/urldd9e4ada6f_kirillF_sample_jenkins_project_tgz-pJ8-com_bigfatplayer_hello_AppJ8/src/com/bigfatplayer/hello/Work.java:379: error: [NullAway] dereferenced expression this.comment is @Nullable
            if (!this.comment.equals(that.comment))
                             ^
    (see http://t.uber.com/nullaway )
../wpi/urldd9e4ada6f_kirillF_sample_jenkins_project_tgz-pJ8-com_bigfatplayer_hello_AppJ8/src/com/bigfatplayer/hello/Work.java:437: error: [NullAway] dereferenced expression schemes.get(iprot.getScheme()) is @Nullable
        schemes.get(iprot.getScheme()).getScheme().read(iprot, this);
                                      ^
    (see http://t.uber.com/nullaway )
../wpi/urldd9e4ada6f_kirillF_sample_jenkins_project_tgz-pJ8-com_bigfatplayer_hello_AppJ8/src/com/bigfatplayer/hello/Work.java:442: error: [NullAway] dereferenced expression schemes.get(oprot.getScheme()) is @Nullable
        schemes.get(oprot.getScheme()).getScheme().write(oprot, this);
                                      ^
    (see http://t.uber.com/nullaway )
../wpi/urldd9e4ada6f_kirillF_sample_jenkins_project_tgz-pJ8-com_bigfatplayer_hello_AppJ8/src/com/bigfatplayer/hello/CalculatorServer.java:26: error: [NullAway] dereferenced expression w is @Nullable
        return w.getNum1() + w.getNum2();
                ^
    (see http://t.uber.com/nullaway )
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
20 errors
